# dxpriceaggregator

./: .gitignore  .repl_history  LICENSE  README.md
.github/workflows/: rust.yml
ceramic_wrapper/: ceramic.js  package-lock.json  package.json
schema/: create_stream.sh
service_interface/: build_interface.sh
service_interface/air-scripts/: aggregator_service.ping.air  aggregator_service.process_data.air  aggregator_service.read_last_price.air  aggregator_service.ts
service_interface/aqua-scripts/: aggregator_service.aqua
services/: .repl_history  Config.toml  build.sh  deploy_service.sh
services/aggregator_service/: Cargo.toml  build.sh
services/aggregator_service/src/: barprice.rs  main.rs  price_processing.rs
services/aggregatorservice/: Cargo.toml  Config.toml
services/aggregatorservice/scripts/: build.sh
services/aggregatorservice/src/: main.rs  numeric_utils.rs
services/air-scripts/: read_last_price.read_last_price.air  read_last_price.ts  test.sh
services/aqua-scripts/: read_last_price.aqua
services/ceramic_adapter/: Cargo.toml  Config.json
services/ceramic_adapter/src/: main.rs
services/configs/: aggregator_service_cfg.json  ceramic_adapter_cfg.json  ceramic_adapter_cfg.unix.json
web/public/: index.html
web/src/: App.scss  App.tsx
web/src/_aqua/: aggregator_service.ts  run_get_stream_price.ts
