[package]
name = "aggregatorservice"
version = "0.1.0"
authors = ["juanobligado <juan.obligado@gmail.com>"]
edition = "2018"
description = "aggregatorservice, a Marine wasi module"
license = "Apache-2.0"

[[bin]]
name = "aggregatorservice"
path = "src/main.rs"

[dependencies]
marine-rs-sdk = { version="0.6.11", features=["logger"]}
log = "0.4.14"
serde = {version = "1.0.118", features = ["derive"] }
serde_json = "1.0.64"
chrono = "0.4.19"

[dev-dependencies]
marine-rs-sdk-test = "0.1.11"

[dev]
[profile.release]
opt-level = "s"
